# nwo-text-cad

./: INTEGRATION.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
examples/: example_pick_place_robot.py
harness/: README.md
nwo_text_cad/: __init__.py  assembly_planner.py  cad_generator.py  production_planner.py  sdf_generator.py  urdf_generator.py
nwo_text_cad/cli/: __init__.py  assembly.py  cad.py  production.py  sdf.py
references/: gear-design.md  motor-standards.md
scripts/: nwo-urdf
skills/assembly/: SKILL.md
skills/cad/: SKILL.md
skills/production/: SKILL.md
skills/sdf/: SKILL.md
urdf/: SKILL.md
workflows/: publish.yml
